<resources>
    <string name="app_name">QuizApp</string>
    <string name="greeting1">Let\'s find out if you are good in math?</string>
    <string name="greeting2">Plese fill out your name and let\'s start!</string>
    <string name="button1">Start</string>
    <string name="button2">Check result</string>
    <string name="hint1">It starts with the letter D</string>
    <string name="hint2">It starts with the letter M</string>
    <string name="question1">1) How much is it 9 x 7?</string>
    <string name="question2">2) How much is it 105 / 5?</string>
    <string name="question3">3) Which of these numbers are prime numbers?</string>
    <string name="question4">4) Which of these numbers are odd numbers?</string>
    <string name="question5">5) What is the name of this arithmetic operation ÷ ?</string>
    <string name="question6">6) What is the name of this arithmetic operation × ?</string>
</resources>
